# line-following-AGV-gazebo-sim

./: README.md
agv_description/: CMakeLists.txt  package.xml
agv_description/src/urdf/: agv_for_line_following.gazebo.xacro  agv_for_line_following.urdf.xacro
agv_description/urdf/: agv_for_line_following.gazebo.xacro  agv_for_line_following.urdf.xacro
agv_gazebo/: CMakeLists.txt  package.xml  setup.py
agv_gazebo/launch/: agv_empty_world.launch  agv_world.launch  multi_agv.launch
agv_gazebo/models/agv_line_following/: model-1_4.sdf  model.config  model.sdf
agv_gazebo/models/agv_line_following/ground/: model.sdf
agv_gazebo/models/agv_line_following/ground/materials/scripts/: course.material
agv_gazebo/src/: line_folliowing_agv.py  line_following_agv.py  line_following_agv_multi.py  teleop_agv.py
agv_gazebo/worlds/: agv_line_following.world
tool/: stl_inertia.py
