<?xml version="1.0"?>
<package format="2">
  <name>agv_gazebo</name>
  <version>1.3.2</version>
  <description>
    Gazebo simulation package for agv
  </description>
  <license>null</license>
  <author email="cindynianx@gmail.com">Cindy</author>
  <maintainer email="cindynianx@gmail.com">Cindy</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>
  <depend>gazebo_ros</depend>
  <exec_depend>gazebo</exec_depend>
  <exec_depend>agv_description</exec_depend>
  <export>
    <gazebo_ros gazebo_media_path="${prefix}"/>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
</package>
